# finally-new

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ruff.toml
.claude/: settings.json
.claude/agents/: change-reviewer.md
backend/: CLAUDE.md  market_data_demo.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: _response.py  _trade.py  chat.py  portfolio.py  system.py  watchlist.py
backend/app/db/: __init__.py  connection.py  queries.py  schema.sql
backend/app/llm/: __init__.py  client.py  prompt.py  schemas.py
backend/app/market/: __init__.py  cache.py  factory.py  interface.py  massive_client.py  models.py  seed_prices.py  simulator.py  stream.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_routes.py
backend/tests/db/: test_queries.py
backend/tests/llm/: test_client.py  test_prompt.py  test_schemas.py
backend/tests/market/: test_cache.py  test_factory.py  test_massive.py  test_models.py  test_simulator.py  test_simulator_source.py  test_stream.py
frontend/: jest.config.ts  package-lock.json  package.json
frontend/__mocks__/: lightweight-charts.ts
frontend/__tests__/: ChatPanel.test.tsx  PositionsTable.test.tsx  TradeBar.test.tsx  Watchlist.test.tsx  setup.ts
frontend/app/: globals.css  layout.tsx  (+1 more)
planning/: HANDOFF.md  MARKET_DATA_SUMMARY.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  PLAN.md  REVIEW-opencode.md
scripts/: README.md  start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts
(+14 files in other folders)
